# INF202---Group-18

./: .gitignore  LICENSE  README.md  images.txt  input.toml  log  main.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: github-ci.yaml
Examples/: Geometry.ipynb
Report/: main.tex  report_template.cls
Report/Bibliography/: Bibliography.bib
Report/Covers/: 00-Cover.aux
configs/: default.toml  test.toml
examples/: Geometry.ipynb
src/: cells.py  factory.py  line.py  mesh.py  triangle.py
src/Geometry/: __init__.py  cellfactory.py  cells.py  line.py  mesh.py  triangle.py
src/InputOutput/: __init__.py  commandlineParser.py  log.py  tomlParser.py
src/Simulation/: __init__.py  cells.py  factory.py  line.py  mesh.py  plotter.py  simulation.py  solver.py  triangle.py
tests/: testTriangle.py  test_cmdlineparser.py  test_line.py  test_log.py  test_mesh.py  test_plotter.py  test_simulation.py  test_solver.py  test_tomlParser.py  test_triangle.py  testline.py  testmesh.py
